Refactored Discord request flow to use relay heartbeats and TCP bridge